--- a/.env
+++ b/.env
@@ -35,3 +35,9 @@ DATABASE_URL=mysql://root:@127.0.0.1:3308/supply_1?serverVersion=5.7
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=f82a91a212c57f21dd9de4d7a9b06467
+###< lexik/jwt-authentication-bundle ###
